testsuite/tests/typecheck/should_fail/tcfail173.stderr

tcfail173.hs:6:12: error:
    Illegal declaration of a type or class operator ‘<.>’
    Suggested fix: Perhaps you intended to use TypeOperators
